--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-<!--    <filter>
+    <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>com.fan.filter.EncodingFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>EncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
     <servlet>
         <servlet-name>UserServlet</servlet-name>
         <servlet-class>com.fan.servlet.UserServlet</servlet-class>
