添加过滤器,取消xml注释 增加商品类型管理功能

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -18,5 +18,12 @@
     <servlet-mapping>
         <servlet-name>UserServlet</servlet-name>
         <url-pattern>/UserServlet</url-pattern>
+    </servlet-mapping> <servlet>
+        <servlet-name>GoodsTypeServlet</servlet-name>
+        <servlet-class>com.fan.servlet.GoodsTypeServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GoodsTypeServlet</servlet-name>
+        <url-pattern>/GoodsTypeServlet</url-pattern>
     </servlet-mapping>
 </web-app>
