增加商品管理功能

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -18,7 +18,8 @@
     <servlet-mapping>
         <servlet-name>UserServlet</servlet-name>
         <url-pattern>/UserServlet</url-pattern>
-    </servlet-mapping> <servlet>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>GoodsTypeServlet</servlet-name>
         <servlet-class>com.fan.servlet.GoodsTypeServlet</servlet-class>
     </servlet>
@@ -26,4 +27,13 @@
         <servlet-name>GoodsTypeServlet</servlet-name>
         <url-pattern>/GoodsTypeServlet</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>GoodsInfoServlet</servlet-name>
+        <servlet-class>com.fan.servlet.GoodsInfoServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GoodsInfoServlet</servlet-name>
+        <url-pattern>/GoodsInfoServlet</url-pattern>
+    </servlet-mapping>
+
 </web-app>
