--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,6 +11,15 @@
         <filter-name>EncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>LoginFilter</filter-name>
+        <filter-class>com.fan.filter.LoginFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/pay.jsp</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>UserServlet</servlet-name>
         <servlet-class>com.fan.servlet.UserServlet</servlet-class>
@@ -35,5 +44,12 @@
         <servlet-name>GoodsInfoServlet</servlet-name>
         <url-pattern>/GoodsInfoServlet</url-pattern>
     </servlet-mapping>
-
+    <servlet>
+        <servlet-name>ShopCartServlet</servlet-name>
+        <servlet-class>com.fan.servlet.ShopCartServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ShopCartServlet</servlet-name>
+        <url-pattern>/ShopCartServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
